k8s/apps/ntfy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
spec:
  selector:
    app: ntfy
  ports:
    - port: 8080
      targetPort: 8080
